fixed code box horizontal scrolling issue on firefox

--- a/contents/themes/precise/static/css/build.css
+++ b/contents/themes/precise/static/css/build.css
@@ -25,7 +25,7 @@ green     #859900  operators, other keywords
 .codehilitetable .linenos { padding: 0 10px; background: rgb(1, 54, 68); color: #586e75; }
 .codehilitetable .code { width: 640px; overflow-x: auto; }
 .codehilitetable .code pre { margin: 10px; }
-.codehilitetable .code .codehilite { width: 640px; }
+.codehilitetable .code .codehilite { width: 640px; overflow-x: auto; }
 .codehilitetable .c { color: #586e75 } /* Comment */
 .codehilitetable .err { color: #93a1a1 } /* Error */
 .codehilitetable .g { color: #93a1a1 } /* Generic */
